--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/pwa": "^0.5.3",
     "@angular/router": "^14.0.0",
     "@capacitor/android": "4.4.0",
     "@capacitor/app": "4.1.0",
@@ -31,6 +32,7 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-fingerprint-aio": "^5.0.1",
+    "firebase": "^9.16.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
